--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 div, ul, li { margin:0; padding:0; }
 
 #blogMenu {
-	float:right;
+	float:middle;
 	margin:0px 5px 3px 5px;
 	padding:0 0 3px 0;
 	-moz-border-radius: 3px;
