--- a/index.html
+++ b/index.html
@@ -1,101 +1,13 @@
-<style>
-
-/* 블로그메뉴 */
-
-
-div, ul, li { margin:0; padding:0; }
-
-#blogMenu {
-	float:middle;
-	margin:0px 5px 3px 5px;
-	padding:0 0 3px 0;
-	-moz-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-}
-
-#blogMenu, ul ul {
-	box-shadow: 0px 0px 15px rgba(0,0,0,.3);
-	-moz-box-shadow: 0px 0px 15px rgba(0,0,0,.3);
-	-webkit-box-shadow: 0px 0px 15px rgba(0,0,0,.3);
-	-o-box-shadow: 0px 0px 15px rgba(0,0,0,.3);
-	background-color:#5c5c5c;
-}
-
-
-
-#blogMenu ul li {
-	float:left;
-	list-style-type:none;
-}
-
-
-#blogMenu a {
-	height:16px;
-	color:#f1f1f1;
-	font-family:arial;
-	font-size:12px;
-	padding:0 10px 0 10px;
-	text-decoration:none;
-}
-
-#blogMenu a:hover {
-	color:#D4F4FA;
-	border-bottom:3px solid #FAED7D;
-}
-
-#blogMenu ul ul {
-	margin-top:3px;
-	display:none;
-	position:absolute;
-	-moz-border-radius-bottom-left: 3px;
-	 -khtml-border-bottom-left-radius: 3px;
-	 -webkit-border-bottom-left-radius: 3px;
-	 border-bottom-left-radius: 3px;
-	-moz-border-radius-bottom-right: 3px;
-	 -khtml-border-bottom-right-radius: 3px;
-	 -webkit-border-bottom-right-radius: 3px;
-	 border-bottom-right-radius: 3px;
-}
-
-#blogMenu ul li:hover ul {
-	display: block;
-}
-
-#blogMenu ul ul li {
-	float:none;
-}
-
-</style>
-
-<div id="blogMenu">
-<ul>
-<li><a href="#">Menu 1</a></li>
-
-<li><a href="#">Menu 2</a>
-
-<ul>
-<li><a href="#">Sub Menu 1</a></li>
-<li><a href="#">Sub Menu 2</a></li>
-<li><a href="#">Sub Menu 3</a></li>
-</ul>
-
-</li>
-
-
-<li><a href="#">Menu 3</a>
-
-<ul>
-<li><a href="#">Sub Menu 1</a></li>
-<li><a href="#">Sub Menu 2</a></li>
-<li><a href="#">Sub Menu 3</a></li>
-</ul>
-
-</li>
-
-
-<li><a href="#">Menu 4</a></li>
-<li><a href="#">Menu 5</a></li>
-</ul>
-</div>
+	<nav id="topMenu" >
+		<ul>
+			<li><a class="menuLink" href="http://unikys.tistory.com/category/Programming%20Lecture/%EB%B0%91%EB%B0%94%EB%8B%A5%EB%B6%80%ED%84%B0%20%ED%99%88%ED%8E%98%EC%9D%B4%EC%A7%80%20%EB%A7%8C%EB%93%A4%EA%B8%B0">LECTURES</a></li>
+			<li>|</li>
+			<li><a class="menuLink" href="http://unikys.tistory.com/guestbook">GUEST BOOK</a></li>
+			<li>|</li>
+			<li><a class="menuLink" href="http://unikys.tistory.com/tag">TAG CLOUD</a></li>
+			<li>|</li>
+			<li><a class="menuLink" href="http://unikys.tistory.com/media">MEDIA LOG</a></li>
+			<li>|</li>
+			<li><a class="menuLink" href="http://unikys.tistory.com/location">LOCATION LOG</a></li>
+		</ul>
+	</nav>
