--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
-	<nav id="topMenu" >
-		<ul>
-			<li><a class="menuLink" href="http://unikys.tistory.com/category/Programming%20Lecture/%EB%B0%91%EB%B0%94%EB%8B%A5%EB%B6%80%ED%84%B0%20%ED%99%88%ED%8E%98%EC%9D%B4%EC%A7%80%20%EB%A7%8C%EB%93%A4%EA%B8%B0">LECTURES</a></li>
-			<li>|</li>
-			<li><a class="menuLink" href="http://unikys.tistory.com/guestbook">GUEST BOOK</a></li>
-			<li>|</li>
-			<li><a class="menuLink" href="http://unikys.tistory.com/tag">TAG CLOUD</a></li>
-			<li>|</li>
-			<li><a class="menuLink" href="http://unikys.tistory.com/media">MEDIA LOG</a></li>
-			<li>|</li>
-			<li><a class="menuLink" href="http://unikys.tistory.com/location">LOCATION LOG</a></li>
-		</ul>
-	</nav>
+<header id="header" class="header" itemscope itemtype="http://schema.org/WPHeader">
+   <div class="header-inner">
+      <div class="site-brand-wrapper">
+         <div class="site-meta">
+            <div class="custom-logo-site-title">
+               <a href="/" class="brand" rel="start">
+               <span class="logo-line-before"><i></i></span>
+               <span class="site-title">Di Molto</span>
+               <span class="logo-line-after"><i></i></span>
+               </a>
+            </div>
+         </div>
+         <div class="site-nav-toggle">
+            <button aria-label="Navigationsleiste an/ausschalten">
+            <span class="btn-bar"></span>
+            <span class="btn-bar"></span>
+            <span class="btn-bar"></span>
+            </button>
+         </div>
+      </div>
+      <nav class="site-nav">
+         <ul id="menu" class="menu">
+            <li class="menu-item menu-item-home menu-item-active">
+               <a href="/" rel="section"><i class="menu-item-icon fa fa-fw fa-home"></i> <br>메인 메뉴</a>
+            </li>
+            <li class="menu-item menu-item-installation">
+               <a href="/install" rel="section"><i class="menu-item-icon fa fa-fw fa-install"></i> <br>언어 개발</a>
+            </li>
+            <li class="menu-item menu-item-screenshots">
+               <a href="/screenshots" rel="section"><i class="menu-item-icon fa fa-fw fa-screenshots"></i> <br>자료 파일</a>
+            </li>
+            <li class="menu-item menu-item-downloads">
+               <a href="https://cafe.naver.com/dimolto" rel="section"><i class="menu-item-icon fa fa-fw fa-downloads"></i> <br>네이버 카페</a>
+            </li>
+         </ul>
+      </nav>
+   </div>
+</header>
