--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <header id="header" class="header" itemscope itemtype="http://schema.org/WPHeader">
+	
+	<title>Di Molto IO</title>
+	
   <style>
     /* normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html {
