--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <header id="header" class="header" itemscope itemtype="http://schema.org/WPHeader">
 	
+	<head>
 	<title>Di Molto IO</title>
-	
+	</head>
+		
   <style>
     /* normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html {
