--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	
 	<head>
 	<title>Di Molto IO</title>
+	<link rel="shortcut icon" href="https://raw.githubusercontent.com/dimolto312/site/master/favicon.ico" type="image/x-icon">
 	</head>
 		
   <style>
