--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <header id="header" class="header" itemscope itemtype="http://schema.org/WPHeader">
 	
 	<head>
-	<title>Di Molto IO</title>
-	<link rel="shortcut icon" href="https://raw.githubusercontent.com/dimolto312/site/master/favicon.ico" type="image/x-icon">
+	<title>Di Molto</title>
+	<link rel="shortcut icon" href="https://raw.githubusercontent.com/dimolto312/site/master/favicon.ico">
 	</head>
 		
   <style>
