--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 	
 	<head>
 	<title>Di Molto</title>
-	<link rel="shortcut icon" href="https://raw.githubusercontent.com/dimolto312/site/master/favicon.ico">
+	<link rel="shortcut icon" href="https://raw.githubusercontent.com/dimolto312/site/master/favicon.ico" type="image/x-icon" />
+	<link rel="icon" href="https://raw.githubusercontent.com/dimolto312/site/master/favicon.ico" type="image/x-icon" />
 	</head>
 		
   <style>
