--- a/index.html
+++ b/index.html
@@ -3211,7 +3211,7 @@ details > b {
       <div class="site-brand-wrapper">
          <div class="site-meta">
             <div class="custom-logo-site-title">
-               <a href="/" class="brand" rel="start">
+               <a href="/site" class="brand" rel="start">
                <span class="logo-line-before"><i></i></span>
                <span class="site-title">Di Molto</span>
                <span class="logo-line-after"><i></i></span>
