--- a/index.html
+++ b/index.html
@@ -3206,8 +3206,17 @@ details > p > i {
 details > b {
   color: #d1d1d2;
 }
+.div_box { 
+   position: absolute; 
+  width: 240px;
+   background: #fff;
+   top: 0;
+   margin: left;
+  box-shadow: 0 2px 2px 0 #000, 0 3px 1px -2px #000, 0 1px 5px 0 #000;
+  border-radius: initial;
+}
   </style>
-   <div class="header-inner">
+   <div class="div_box">
       <div class="site-brand-wrapper">
          <div class="site-meta">
             <div class="custom-logo-site-title">
