--- a/index.html
+++ b/index.html
@@ -3216,7 +3216,7 @@ details > b {
   border-radius: initial;
 }
   </style>
-   <div class="div_box">
+   <div class="header-inner">
       <div class="site-brand-wrapper">
          <div class="site-meta">
             <div class="custom-logo-site-title">
