--- a/index.html
+++ b/index.html
@@ -3211,7 +3211,7 @@ details > b {
   width: 240px;
    background: #fff;
    top: 0;
-margin-left:5px;
+margin:5px;
   box-shadow: 0 2px 2px 0 #000, 0 3px 1px -2px #000, 0 1px 5px 0 #000;
   border-radius: initial;
 }
