--- a/index.html
+++ b/index.html
@@ -2465,11 +2465,10 @@ ul.breadcrumb li+li:last-child {
 }
 .header-inner {
   position: absolute;
-  top: 380px;
+  top: 0;
   overflow: hidden;
   padding: 0;
   width: 240px;
-  margin: -330px;
   background: #fff;
   box-shadow: 0 2px 2px 0 #000, 0 3px 1px -2px #000, 0 1px 5px 0 #000;
   border-radius: initial;
