--- a/index.html
+++ b/index.html
@@ -2871,10 +2871,14 @@ ul.breadcrumb li+li:last-child {
   border-radius: initial;
 }
 .post-block {
-  padding: 40px;
-  background: #fff;
-  box-shadow: 0 2px 2px 0 #000, 0 3px 1px -2px #000, 0 1px 5px 0 #000;
-  border-radius: initial;
+    padding: 40px;
+    background: #fff;
+    width: auto;
+    position: relative;
+    left: 210;
+    top: 0;
+    box-shadow: 0 2px 2px 0 #000, 0 3px 1px -2px #000, 0 1px 5px 0 #000;
+    border-radius: initial;
 }
 #posts > article + article .post-block {
   margin-top: 12px;
